--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,7 +6,7 @@ Flask-SQLAlchemy==3.1.1
 gunicorn==22.0.0
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
-jinja2==3.1.4
+Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.0
 psycopg2-binary==2.9.9
